...
    
    // MARK: Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        webView.navigationDelegate = self
        
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
...
